--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -7,7 +7,7 @@ banner:
   button:
    enable : true
    label : "Sign up for updates"
-   link : "products"
+   link : "subscribe"
 
 #################################### Subscribe ########################
 subscribe:
